	  - Allow for it to be listed
	  - Hint the user to cd into ~/.bundlegem/gem_templates and clone any they choose
	
	- Behavior: gems in the ~/.bundlegem/gem_templates folder take precidence over
	  built in gems?  ...add prompt
    - Cleaning:  Make create_gem build a string instead of puts so
	  output can be squelched for testing
    - CMD:  --templateize-current-directory to make the current directory into a
      new template
    - CMD:  --newtemplate to start new template
    - CMD:  --default to set a gem_template as the default one (list should indicate this)
    - CORE:  refactor the built-in gems so they look pretty (templates/newgem/lib/#{name}.rb.tt)
			* Need to implement partials that are stored inside the gem

    - CORE:  Created TemplateManager for working with templates
    - BUG:  Accidentally tracked in a test gem project and fixed tests to not
      change directory into a test area for creating new gems.
    


** 0.0.5 **
  - Bug in 0.0.3 that broke building template gems fixed
    * Template Directories part of code was being skipped for built in templates, but not all of it
  - Bug where sub directories were not being explicitly created
  - Added integration test just to make sure the built-in templates can be generated without problems
  - Cleaned up internal API and how the binary works


** 0.0.4 **
  - Tell the user what files are being created
  - Created config['git_repo_url'] variable to be used in templates


** 0.0.3 **
	- CMD:  --list to list templates (with descriptions)
	- Raise error when project name already exists, do not overwrite!
	- Raises error if none of the files in the template directory end in .tt
	- Create even empty folders

	
** 0.0.2 **
	- Added default gem template 'service'
	- Better syntax of bundlegem gem_name -t template_name
	- CMD:  --help to display a help message


** 0.0.1 **
  - Very basic prototype that allows you to specify templates in
    ~/.bundlegem/templates
