@@ -1,0 +1,4 @@
+# Comments made to this file will not be preserved
+---
+default_template: newgem
+
