@@ -24,7 +24,7 @@ describe Bundlegem do
     
     list_output = Bundlegem.list
     
-    expect(list_output).to eq " PREDEFINED:\n   newgem\n   service\n\n MISC:\n   empty_template\n\n"
+    expect(list_output).to eq " PREDEFINED:\n * newgem       (default)\n   service\n\n MISC:\n   empty_template\n\n"
     expect(File.exists?("#{ENV['HOME']}/.bundlegem")).to be true
   end
   
